crates/pcb-zen/tests/snapshots/module_loading__module_load_kicad_symbol.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "?")
      (footprint "R_0402_1005Metric:R_0402_1005Metric")
      (libsource (lib "lib") (part "?") (description "unknown"))
      (sheetpath (names "R1") (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd"))
      (tstamps "993684ed-29bc-53ba-bc0d-39d7d84da9bd")
      (property (name "Reference") (value "U1"))
      (property (name "symbol_name") (value "R_US"))
      (property (name "symbol_path") (value "[CACHE_DIR]gitlab/kicad/libraries/kicad-symbols/9.0.0/Device.kicad_sym"))
      (property (name "symbol_value") (value "(symbol
  \"R_US\"
  (pin_numbers
    (hide yes)
  )
  (pin_names
    (offset 0)
  )
  (exclude_from_sim no)
  (in_bom yes)
  (on_board yes)
  (property
    \"Reference\"
    \"R\"
    (at 2.54 0 90)
    (effects
      (font (size 1.27 1.27))
    )
  )
  (property
    \"Value\"
    \"R_US\"
    (at -2.54 0 90)
    (effects
      (font (size 1.27 1.27))
    )
  )
  (property
    \"Footprint\"
    \"\"
    (at 1.016 -0.254 90)
    (effects
      (font (size 1.27 1.27))
      (hide yes)
    )
  )
  (property
    \"Datasheet\"
    \"~\"
    (at 0 0 0)
    (effects
      (font (size 1.27 1.27))
      (hide yes)
    )
  )
  (property
    \"Description\"
    \"Resistor, US symbol\"
    (at 0 0 0)
    (effects
      (font (size 1.27 1.27))
      (hide yes)
    )
  )
  (property
    \"ki_keywords\"
    \"R res resistor\"
    (at 0 0 0)
    (effects
      (font (size 1.27 1.27))
      (hide yes)
    )
  )
  (property
    \"ki_fp_filters\"
    \"R_*\"
    (at 0 0 0)
    (effects
      (font (size 1.27 1.27))
      (hide yes)
    )
  )
  (symbol
    \"R_US_0_1\"
    (polyline
      (pts
        (xy 0 2.286)
        (xy 0 2.54)
      )
      (stroke
        (width 0)
        (type default)
      )
      (fill
        (type none)
      )
    )
    (polyline
      (pts
        (xy 0 2.286)
        (xy 1.016 1.905)
        (xy 0 1.524)
        (xy -1.016 1.143)
        (xy 0 0.762)
      )
      (stroke
        (width 0)
        (type default)
      )
      (fill
        (type none)
      )
    )
    (polyline
      (pts
        (xy 0 0.762)
        (xy 1.016 0.381)
        (xy 0 0)
        (xy -1.016 -0.381)
        (xy 0 -0.762)
      )
      (stroke
        (width 0)
        (type default)
      )
      (fill
        (type none)
      )
    )
    (polyline
      (pts
        (xy 0 -0.762)
        (xy 1.016 -1.143)
        (xy 0 -1.524)
        (xy -1.016 -1.905)
        (xy 0 -2.286)
      )
      (stroke
        (width 0)
        (type default)
      )
      (fill
        (type none)
      )
    )
    (polyline
      (pts
        (xy 0 -2.286)
        (xy 0 -2.54)
      )
      (stroke
        (width 0)
        (type default)
      )
      (fill
        (type none)
      )
    )
  )
  (symbol
    \"R_US_1_1\"
    (pin
      passive
      line
      (at 0 3.81 270)
      (length 1.27)
      (name
        \"~\"
        (effects
          (font (size 1.27 1.27))
        )
      )
      (number
        \"1\"
        (effects
          (font (size 1.27 1.27))
        )
      )
    )
    (pin
      passive
      line
      (at 0 -3.81 90)
      (length 1.27)
      (name
        \"~\"
        (effects
          (font (size 1.27 1.27))
        )
      )
      (number
        \"2\"
        (effects
          (font (size 1.27 1.27))
        )
      )
    )
  )
  (embedded_fonts no)
)"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "IN")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "OUT")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
  )
)
