crates/pcb-zen/tests/snapshots/module_loading__module_relative_from_subdir.snap
---
source: crates/pcb-zen/tests/module_loading.rs
assertion_line: 198
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "TEST")
      (footprint "stdlib_kicad-footprints_Resistor_SMD:R_0603_1608Metric")
      (libsource (lib "lib") (part "TEST") (description "unknown"))
      (sheetpath (names "M1.test_component") (tstamps "4b7ee67c-33a2-5915-b83b-b6b2a7a545d1"))
      (tstamps "4b7ee67c-33a2-5915-b83b-b6b2a7a545d1")
      (property (name "Reference") (value "U1"))
      (property (name "manufacturer") (value "TEST"))
      (property (name "part") (value "{\"manufacturer\":\"TEST\",\"mpn\":\"TEST\",\"qualifications\":[]}"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "TEST")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "1") (type "stereo"))
        (pin (num "2") (name "2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "IN")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "OUT")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
  )
)
