crates/pcb-zen/tests/snapshots/module_loading__module_with_multiple_aliases.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "R1")
      (value "SMD 0603 2kOhms +/-10%")
      (footprint "Resistor_SMD:R_0603_1608Metric")
      (libsource (lib "lib") (part "SMD 0603 2kOhms +/-10%") (description "unknown"))
      (sheetpath (names "R2.R") (tstamps "cda8dfca-6e8a-59fd-87a2-5ff0162348de"))
      (tstamps "cda8dfca-6e8a-59fd-87a2-5ff0162348de")
      (property (name "Reference") (value "R1"))
      (property (name "Mount") (value "SMD"))
      (property (name "Package") (value "0603"))
      (property (name "Resistance") (value "2kOhms +/-10%"))
      (property (name "Value") (value "SMD 0603 2kOhms +/-10%"))
      (property (name "description") (value "SMD 0603 2kOhms +/-10%"))
    )
    (comp (ref "R2")
      (value "SMD 0805 3kOhms +/-10%")
      (footprint "Resistor_SMD:R_0805_2012Metric")
      (libsource (lib "lib") (part "SMD 0805 3kOhms +/-10%") (description "unknown"))
      (sheetpath (names "R3.R") (tstamps "ea192552-2289-5a86-b9dd-34d3ddb7fbc7"))
      (tstamps "ea192552-2289-5a86-b9dd-34d3ddb7fbc7")
      (property (name "Reference") (value "R2"))
      (property (name "Mount") (value "SMD"))
      (property (name "Package") (value "0805"))
      (property (name "Resistance") (value "3kOhms +/-10%"))
      (property (name "Value") (value "SMD 0805 3kOhms +/-10%"))
      (property (name "description") (value "SMD 0805 3kOhms +/-10%"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "?")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "P1") (type "stereo"))
        (pin (num "2") (name "P2") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "P3")
      (node (ref "R1") (pin "1") (pintype "stereo"))
    )
    (net (code "2") (name "P4")
      (node (ref "R1") (pin "2") (pintype "stereo"))
    )
    (net (code "3") (name "P5")
      (node (ref "R2") (pin "1") (pintype "stereo"))
    )
    (net (code "4") (name "P6")
      (node (ref "R2") (pin "2") (pintype "stereo"))
    )
  )
)
