crates/pcb-zen/tests/snapshots/module_loading__module_with_relative_paths.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
    (net (code "1") (name "P1")
    )
  )
)
Warning: [unused] io() 'P1' in module 'MyModule' is not connected to any ports
  at [TEMP_DIR]MyModule.zen
