crates/pcb-zen/tests/snapshots/module_loading__module_with_workspace_root.snap
---
source: crates/pcb-zen/tests/module_loading.rs
expression: snapshot_output
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
  )
  (libparts
  )
  (nets
    (net (code "1") (name "P1")
    )
  )
)
Warning: io() 'P1' in module 'Submodule' is not connected to any ports
   ╭─[ [TEMP_DIR]submodule.zen:2:6 ]
 2 │P1 = io("P1", Net)
   │           ╰─────── io() 'P1' in module 'Submodule' is not connected to any ports
