crates/pcb-zen/tests/snapshots/module_loading__snapshot_load_component_via_module.snap
---
source: projects/cli/crates/diode_star/tests/module_loading.rs
expression: netlist
---
(export (version "E")
  (design
    (source "unknown")
    (date "")
    (tool "pcb"))
  (components
    (comp (ref "U1")
      (value "NB3N551DG")
      (footprint "SMD:0805")
      (libsource (lib "lib") (part "NB3N551DG") (description "unknown"))
      (sheetpath (names "sub.NB3N551DG") (tstamps "c6204901-d881-5f3c-bbd2-26cd28639c92"))
      (tstamps "c6204901-d881-5f3c-bbd2-26cd28639c92")
      (property (name "Reference") (value "U1"))
      (property (name "Datasheet") (value "https://lcsc.com/product-detail/Logic-ICs_ON_NB3N551DG_NB3N551DG_C146731.html"))
      (property (name "Description") (value ""))
      (property (name "Footprint") (value "C146731:SOIC-8_L4.9-W3.9-P1.27-LS6.0-BL"))
      (property (name "LCSC Part") (value "C146731"))
      (property (name "Value") (value "NB3N551DG"))
      (property (name "symbol_path") (value "[TEMP_DIR]C146731.kicad_sym"))
    )
  )
  (libparts
    (libpart (lib "lib") (part "NB3N551DG")
      (description "")
      (docs "~")
      (footprints
        (fp "*"))
      (pins
        (pin (num "1") (name "ICLK") (type "stereo"))
        (pin (num "2") (name "Q1") (type "stereo"))
        (pin (num "3") (name "Q2") (type "stereo"))
        (pin (num "4") (name "Q3") (type "stereo"))
        (pin (num "5") (name "Q4") (type "stereo"))
        (pin (num "6") (name "GND") (type "stereo"))
        (pin (num "7") (name "VDD") (type "stereo"))
        (pin (num "8") (name "OE") (type "stereo"))
      )
    )
  )
  (nets
    (net (code "1") (name "GND")
      (node (ref "U1") (pin "6") (pintype "stereo"))
    )
    (net (code "2") (name "ICLK")
      (node (ref "U1") (pin "1") (pintype "stereo"))
    )
    (net (code "3") (name "OE")
      (node (ref "U1") (pin "8") (pintype "stereo"))
    )
    (net (code "4") (name "Q1")
      (node (ref "U1") (pin "2") (pintype "stereo"))
    )
    (net (code "5") (name "Q2")
      (node (ref "U1") (pin "3") (pintype "stereo"))
    )
    (net (code "6") (name "Q3")
      (node (ref "U1") (pin "4") (pintype "stereo"))
    )
    (net (code "7") (name "Q4")
      (node (ref "U1") (pin "5") (pintype "stereo"))
    )
    (net (code "8") (name "VDD")
      (node (ref "U1") (pin "7") (pintype "stereo"))
    )
  )
)
